// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`operation structures standalone operations — no interface wrapper 1`] = `
"// AUTO-GENERATED by @typespex/emitter — do not edit

import type { MatchedRequestContext, OperationHandler } from "@typespex/runtime/server";
import type {
  HealthStatus
} from "./models.js";

export interface StatusApiServer<Ctx = MatchedRequestContext> {
  readonly health: OperationHandler<Record<string, never>, never, HealthStatus, Ctx>;
}
"
`;

exports[`operation structures standalone operations — no interface wrapper 2`] = `
"// AUTO-GENERATED by @typespex/emitter — do not edit

import type { ServerOperation } from "@typespex/runtime/server";
import {
  Either,
  createHints,
  emptyHints,
  ResponseEncoders,
  ErrorEncoders,
  Decoders,
  RequestDecoders,
  Validators,
  decodeRequestInput,
  decodeRequestInputAndBody,
  decodeJsonBody,
} from "@typespex/runtime/server";
import * as ServerHints from "./server-hints.js";
import type { HealthStatus } from "./models.js";

const StatusApiOutput = {
  health: ResponseEncoders.json<HealthStatus>(200),
};

const StatusApiErrors = {
  health: ErrorEncoders.json<never>(500),
};

export const StatusApiOperations = {
  health: {
    endpoint: {
      service: { name: "StatusApi", hints: emptyHints() },
      namespaces: [],
      operation: {
        name: "health",
        operationId: "StatusApi.health",
        method: "GET" as const,
        path: "/health",
        hints: emptyHints(),
      },
    },
    decodeInput: () =>
      Either.right({} as Record<string, never>),
    encodeOutput: (output: HealthStatus) => StatusApiOutput.health.encode(output),
    encodeError: (error: never) => StatusApiErrors.health.encode(error),
  } satisfies ServerOperation<Record<string, never>, never, HealthStatus>,

} as const;
"
`;

exports[`operation structures standalone operations — no interface wrapper 3`] = `
"// AUTO-GENERATED by @typespex/emitter — do not edit

import type { HttpInterpreterOptions, HttpRouter, MatchedRequestContext } from "@typespex/runtime/server";
import { bindRoute, createHttpRouter } from "@typespex/runtime/server";
import type { StatusApiServer } from "./server.js";
import { StatusApiOperations } from "./server-operations.js";

export function createStatusApiServerRouter<Ctx extends MatchedRequestContext>(implementation: StatusApiServer<Ctx>, options?: HttpInterpreterOptions<Ctx>): HttpRouter {
  return createHttpRouter([
    bindRoute(StatusApiOperations.health, implementation.health),
  ], options);
}
"
`;

exports[`operation structures nested namespaces carry namespace metadata 1`] = `
"// AUTO-GENERATED by @typespex/emitter — do not edit

import type { ServerOperation } from "@typespex/runtime/server";
import {
  Either,
  createHints,
  emptyHints,
  ResponseEncoders,
  ErrorEncoders,
  Decoders,
  RequestDecoders,
  Validators,
  decodeRequestInput,
  decodeRequestInputAndBody,
  decodeJsonBody,
} from "@typespex/runtime/server";
import * as ServerHints from "./server-hints.js";
import type { Config } from "./models.js";

const NestedApiOutput = {
  getConfig: ResponseEncoders.json<Config>(200),
};

const NestedApiErrors = {
  getConfig: ErrorEncoders.json<never>(500),
};

export const NestedApiOperations = {
  getConfig: {
    endpoint: {
      service: { name: "NestedApi", hints: emptyHints() },
      namespaces: [
        { name: "Admin", fullName: "NestedApi.Admin", hints: emptyHints() },
      ],
      operation: {
        name: "getConfig",
        operationId: "NestedApi.getConfig",
        method: "GET" as const,
        path: "/admin/config",
        hints: emptyHints(),
      },
    },
    decodeInput: () =>
      Either.right({} as Record<string, never>),
    encodeOutput: (output: Config) => NestedApiOutput.getConfig.encode(output),
    encodeError: (error: never) => NestedApiErrors.getConfig.encode(error),
  } satisfies ServerOperation<Record<string, never>, never, Config>,

} as const;
"
`;

exports[`operation structures custom decorator hints for middleware 1`] = `
"// AUTO-GENERATED by @typespex/emitter — do not edit

import { createHintKey } from "@typespex/runtime/server";

export const authHint = createHintKey<string>("auth");
export const typeSpecDocHint = createHintKey<string>("TypeSpec.doc");
export const typeSpecSummaryHint = createHintKey<string>("TypeSpec.summary");
export const typeSpecTagsHint = createHintKey<readonly string[]>("TypeSpec.tags");
"
`;

exports[`operation structures custom decorator hints for middleware 2`] = `
"// AUTO-GENERATED by @typespex/emitter — do not edit

import type { ServerOperation } from "@typespex/runtime/server";
import {
  Either,
  createHints,
  emptyHints,
  ResponseEncoders,
  ErrorEncoders,
  Decoders,
  RequestDecoders,
  Validators,
  decodeRequestInput,
  decodeRequestInputAndBody,
  decodeJsonBody,
} from "@typespex/runtime/server";
import * as ServerHints from "./server-hints.js";

const SecureApiOutput = {
  admin: ResponseEncoders.text(200),
};

const SecureApiErrors = {
  admin: ErrorEncoders.json<never>(500),
};

export const SecureApiOperations = {
  admin: {
    endpoint: {
      service: { name: "SecureApi", hints: emptyHints() },
      namespaces: [],
      operation: {
        name: "admin",
        operationId: "SecureApi.admin",
        method: "GET" as const,
        path: "/admin",
        hints: createHints([[ServerHints.authHint, "admin"]]),
      },
    },
    decodeInput: () =>
      Either.right({} as Record<string, never>),
    encodeOutput: (output: string) => SecureApiOutput.admin.encode(output),
    encodeError: (error: never) => SecureApiErrors.admin.encode(error),
  } satisfies ServerOperation<Record<string, never>, never, string>,

} as const;
"
`;
